--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,5 +1,5 @@
 
-<div class="sideBar show">
+<div class="sideBar" [class.show]="isSideBarOpen">
   <div class="logo-container">
     <img  src="assets/images/logo.png" alt="Logo">
     
