--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,6 +1,12 @@
+.header-container
+{
+    display: flex;
+    justify-content: end;
+}
+
 .header
 {
-    width: 100%;
+    width: calc(100% - 280px);
     position: relative;
     background-color: var(--side-color);
     padding: 0.8rem;
@@ -19,6 +25,7 @@
 .right i.bi-list{
     font-size: 1.8rem;
     font-weight: bold;
+    left: 280px;
     color: black;
     cursor: pointer;
    
@@ -49,6 +56,7 @@
     position: absolute;
     right: 0rem;
     top: 100%;
+    z-index: 3;
     padding-left: 0;
     background-color: #fcfcfc;
     list-style: none;
@@ -83,3 +91,4 @@
 {
     margin-right: 0.1rem;
 }
+
